--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     color: black;
     background: palevioletred;
     margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
 }
 
 header {
@@ -23,5 +24,17 @@ section {
 }
 
 div {
-    margin-right: 20px;
+    margin-right: 5%;
 }
+
+h1 {
+    font-size: 40px;
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  img {
+    height: 200px;
+  }
