--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 
 }
 
-section {
+.chamada {
     background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
@@ -29,12 +29,23 @@ div {
 
 h1 {
     font-size: 40px;
-  }
+}
 
-  p {
+p {
     font-size: 20px;
-  }
+}
 
-  img {
+img {
     height: 200px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+section {
+    padding-left: 20px;
+    padding-right: 20px;
   }
