--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background: palevioletred;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
@@ -45,7 +46,24 @@ img {
     gap: 10px;
 }
 
-section {
+.categoria {
     padding-left: 20px;
     padding-right: 20px;
+    margin-top: 50px;
   }
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 1px solid green;
+}
+
+.categoria h2 {
+    color: rgb(42, 122, 228);
+
+}
+
