--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+@import url("styles/header.css");
+
 :root {
-    --cor-de-fundo: #9d11af;
+    --cor-de-fundo: #EBECEE;
+    --branco: #FFFFFF;
 }
 
 body {
